[gd_scene load_steps=9 format=3 uid="uid://x55p4342hqhh"]

[ext_resource type="Script" path="res://scenes/Battleground.gd" id="1_conv3"]
[ext_resource type="PackedScene" uid="uid://cyl4gg4y6i7mv" path="res://scenes/ui/canvas.tscn" id="2_5oida"]
[ext_resource type="Script" path="res://scenes/battleground/battleground_state_machine.gd" id="4_ovm6g"]
[ext_resource type="Script" path="res://scenes/battleground/idle.gd" id="5_y820d"]
[ext_resource type="Script" path="res://scenes/battleground/generating.gd" id="6_fewda"]
[ext_resource type="PackedScene" uid="uid://bs2ojp8fmt43t" path="res://scenes/screens/levels/buy_area.tscn" id="6_tkc11"]
[ext_resource type="Script" path="res://scenes/battleground/next_turn_calculation.gd" id="7_4pmac"]
[ext_resource type="PackedScene" uid="uid://bxihhqvokjqy" path="res://components/terrain_type_finder/terrain_type_finder.tscn" id="8_mwf72"]

[node name="BattleGround" type="Node2D"]
script = ExtResource("1_conv3")

[node name="canvas" parent="." instance=ExtResource("2_5oida")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 322)

[node name="RedBuyArea" parent="." instance=ExtResource("6_tkc11")]
position = Vector2(-1, 56)
team = "red"
metadata/_edit_lock_ = true

[node name="BlueBuyArea" parent="." instance=ExtResource("6_tkc11")]
position = Vector2(800, 56)

[node name="Structures" type="Node2D" parent="."]

[node name="LivingUnits" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1000
offset_top = 31.0
offset_right = 40.0
offset_bottom = 108.0

[node name="DebugLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="HoveredUnit" type="Label" parent="VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="ActionTakingUnit" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="State" type="Node" parent="."]
script = ExtResource("4_ovm6g")
initial_state = NodePath("Generating")

[node name="Idle" type="Node" parent="State" node_paths=PackedStringArray("root")]
script = ExtResource("5_y820d")
root = NodePath("../..")

[node name="Generating" type="Node" parent="State" node_paths=PackedStringArray("root")]
script = ExtResource("6_fewda")
root = NodePath("../..")

[node name="NextTurnProcess" type="Node" parent="State"]
script = ExtResource("7_4pmac")

[node name="terrain_type_finder" parent="." instance=ExtResource("8_mwf72")]
position = Vector2(508, 244)

[connection signal="next_turn_pressed" from="canvas" to="State" method="_on_canvas_next_turn_pressed"]
[connection signal="buy_unit" from="RedBuyArea" to="." method="_on_red_buy_area_buy_unit"]
[connection signal="buy_unit" from="BlueBuyArea" to="." method="_on_blue_buy_area_buy_unit"]
